[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poe2market"
version = "0.1.0"
description = "Weighted trade search and deal finder for Path of Exile 2"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.24",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
poe2market = "poe2market.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:ament_copyright", "-p", "no:ament_flake8", "-p", "no:ament_pep257", "-p", "no:ament_xmllint", "-p", "no:ament_lint", "-p", "no:launch_testing", "-p", "no:launch_testing_ros"]
